--- a/style.css
+++ b/style.css
@@ -82,6 +82,15 @@ body {
     background-color: #A435F0;
     padding: 10px;
     border-radius: 20px;
+    cursor: pointer;
+    border: solid black 1px;
+}
+
+.categories p:hover {
+    transition-duration: 2s;
+    color: black;
+    background-color: transparent;
+    border: solid #A435F0 1px;
 }
 
 .sale-image {
@@ -100,6 +109,22 @@ body {
     width: 30%;
     top: 50px;
     left: 50px;
+    animation-name: zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+
+@keyframes zoom {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
 .recommanded {
