--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ body {
     gap: 10px;
 }
 
+.navbar__s4{
+    display: none;
+}
+
 .mylearning {
     position: relative;
     cursor: pointer;
@@ -141,8 +145,10 @@ body {
 }
 
 .course__card {
-    width: 300px;
-    margin-top: 10px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 10px;
+    
 }
 
 .course__card img {
@@ -183,8 +189,10 @@ body {
 }
 
 .popular__course__card {
-    width: 300px;
-    margin-top: 13px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 10px;
+    
 }
 
 .popular__course__card img {
@@ -212,4 +220,40 @@ body {
     justify-content: space-between;
     margin: 20px;
     align-items: center;
+}
+
+@media screen and (max-width:800px)
+{
+    body{
+        font-size: 10px;
+    }
+
+}
+
+@media screen and (max-width:600px)
+{
+    .course__card{
+        flex-basis: 40%;
+    }
+
+    .popular__course__card{
+        flex-basis: 40%;
+    }
+
+    .categories{
+        display: none;
+    }
+
+    .navbar__s2,.navbar__s3{
+        display: none;
+    }
+ 
+    .navbar__s4{
+        display: block;
+    }
+    
+    .sale-image__offer{
+        top: 15px;
+    }
+
 }
